--- a/style/main.scss
+++ b/style/main.scss
@@ -4,9 +4,14 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+body{
+    background:linear-gradient(to right,blue,green,yellow)
+}
 
 .form-wrapper{
+    background-color: white;
     width: 600px;
+    padding: 15px;
     margin:100px auto;
     display: flex;
     flex-direction: column;
@@ -19,7 +24,7 @@ input,select,button{
     padding: 10px;
 }
 .table{
-    border:1px solid black;
+    background-color: white;
     width: 1000px;
     margin:30px auto; 
     border-collapse: collapse;
@@ -40,4 +45,15 @@ td .delate{
     color: red;
     cursor: pointer;
     margin-right: 20px;
+}
+.button{
+    border:none;
+    cursor: pointer;
+    border-radius: 15px;
+    padding: 13px;
+    border-width: 2px;
+    background:transparent;
+    width: 100%;
+    border-style: solid;
+    border-image: linear-gradient(to right, darkblue, darkorchid) 1;
 }
